fix problème d'overflow-x à cause des blobs décoratifs

--- a/assets/css/style-accueil.css
+++ b/assets/css/style-accueil.css
@@ -134,6 +134,7 @@ body {
   margin: 0;
   padding: 0;
   background: #342B33;
+  overflow-x: hidden;
 }
 
 main {
